Major gameplay balance and visual polish